Updated site; all assignments

--- a/assets/data.bib
+++ b/assets/data.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Zieffler at 2021-12-08 08:36:02 -0600 
+%% Created for Andrew Zieffler at 2022-08-05 11:21:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{fox:2022,
+	author = {John Fox and Sanford Weisberg and Brad Price},
+	date-added = {2022-08-05 11:12:18 -0500},
+	date-modified = {2022-08-05 11:13:21 -0500},
+	howpublished = {R package version 3.0-5},
+	title = {car{D}ata: Companion to Applied Regression Data Sets},
+	url = {https://CRAN.R-project.org/package=carData},
+	year = {2022}}
 
 @book{Keith:2015,
 	address = {New York},
