--- a/schedule.qmd
+++ b/schedule.qmd
@@ -80,89 +80,90 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- Unit 02: SIMULATION -->
 
 
-<!-- <tr> -->
-<!-- <td colspan="5"><b>Unit 02: Simulation</b></td> -->
-<!-- </tr> -->
+<tr>
+<td colspan="5"><b>Unit 02: Simulation</b></td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Sept. 22</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="3"> -->
-<!--   <a class="my-link" href="readings/04-simulating-from-the-regression-model.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;" rowspan="3">Simulating from the Regression Model</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="3"> -->
-<!--   <a class = "my-link" href="posts/2021-09-20-notes-simulating-from-the-regression-model"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Sept. 22</td>
+<td align="center" style="vertical-align:middle;" rowspan="3">
+  <a class="my-link" href="readings/04-simulating-from-the-regression-model.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;" rowspan="3">Simulating from the Regression Model</td>
+<td align="center" style="vertical-align:middle;" rowspan="3">
+  <a class = "my-link" href="notes/04-simulating-from-the-regression-model.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Sept. 27</td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Sept. 27</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Sept. 29</td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Sept. 29</td>
+</tr>
 
 
 <!-- Unit 03: REGRESSION DIAGNOSTICS -->
 
 
 <!-- <tr> -->
-<!-- <td colspan="5"><b>Unit 03: Regression Diagnostics</b></td> -->
-<!-- </tr> -->
+<td colspan="5"><b>Unit 03: Regression Diagnostics</b></td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 04</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/05-regression-diagnostics.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;" rowspan="2">Regression Diagnostics</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class = "my-link" href="posts/2021-09-27-notes-tools-for-dealing-with-heteroskedasticity"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 04</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class="my-link" href="readings/05-regression-diagnostics.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;" rowspan="2">Regression Diagnostics</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class = "my-link" href="notes/05-regression-diagnostics.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 06</td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 06</td>
+</tr>
 
 
    
 
 <!-- Unit 03: HETEROSKEDASTICITY-->
 
-<!-- <tr> -->
-<!-- <td colspan="5"><b>Unit 04: Tools for Dealing with Heteroskedasticity</b></td> -->
-<!-- </tr> -->
+<tr>
+<td colspan="5"><b>Unit 04: Tools for Dealing with Heteroskedasticity</b></td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 11</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/06-variance-stabilizing-transformations.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;">Variance Stabilizing Transformations</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-09-27-notes-tools-for-dealing-with-heteroskedasticity"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 11</td>
+<td align="center" style="vertical-align:middle;">
+  <a class="my-link" href="readings/06-variance-stabilizing-transformations.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;">Variance Stabilizing Transformations</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="notes/06-tools-for-dealing-with-heteroskedasticity.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 13</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="posts/2021-09-29-reading-wls-and-sandwich-estimation"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;">Weighted Least Squares (WLS) and Sandwich Estimation</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-09-27-notes-tools-for-dealing-with-heteroskedasticity"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 13</td>
+<td align="center" style="vertical-align:middle;">
+  <a class="my-link" href="readings/07-wls-and-sandwich-estimation.html
+  "><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;">Weighted Least Squares (WLS) and Sandwich Estimation</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="notes/06-tools-for-dealing-with-heteroskedasticity.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
 
 <!-- Unit 04: COLLINEARITY-->
@@ -176,7 +177,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Oct. 18</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/07-diagnosing-collinearity.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/08-diagnosing-collinearity.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Diagnosing Collinearity</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -188,7 +189,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Oct. 20</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/08-pca-via-spectral-decomposition.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/09-pca-via-spectral-decomposition.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Principal Components Analysis via Spectral Decomposition</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -200,7 +201,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Oct. 25</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/09-pca-via-svd.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/10-pca-via-svd.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Principal Components Analysis via Singular Value Decomposition</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -228,7 +229,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Nov. 03</td> -->
 <!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/10-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;" rowspan="2">Biased Estimation: Ridge Regression</td> -->
 <!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
@@ -264,7 +265,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Nov. 15</td> -->
 <!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/11-model-selection.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/12-model-selection.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;" rowspan="2">Model Selection: The 'Vintage' Methods</td> -->
 <!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
@@ -282,7 +283,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Nov. 22</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/12-cross-validation.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Model Selection: Cross-Validation Methods</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -304,7 +305,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Nov. 29</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/12-cross-validation.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Model Selection: Cross-Validation Methods</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -323,7 +324,7 @@ The calendar below lists the tentative course topics. The dates listed are subje
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Dec. 01</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/13-regression-from-summary-measures.html"><span class="fa fa-book"></span></a> -->
+<!--   <a class="my-link" href="readings/14-regression-from-summary-measures.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
 <!-- <td style="vertical-align:middle;">Regression from Summary Measures</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
