--- a/data.qmd
+++ b/data.qmd
@@ -57,9 +57,9 @@ title: "Data"
   </a>
 </td>
 <td align="center" style="vertical-align:middle;">
-  <!-- <a href="codebooks/substance-family.html" target="_blank"> -->
-  <!--   <span class="fas fa-book-open" style="color: #ff2600; font-size: 20px;"></span> -->
-  <!-- </a> -->
+  <a href="codebooks/equal-education-opportunity.html" target="_blank">
+    <span class="fas fa-book-open" style="color: #ff2600; font-size: 20px;"></span>
+  </a>
 </td>
 </tr>
 
