--- a/schedule.qmd
+++ b/schedule.qmd
@@ -166,36 +166,36 @@ The calendar below lists the tentative course topics. The dates listed are subje
 </tr>
 
 
-<!-- Unit 04: COLLINEARITY-->
+Unit 04: COLLINEARITY
 
 
-<!-- <tr> -->
-<!-- <td colspan="5"><b>Unit 05: Diagnosing Collinearity and Tools for Dealing with It</b></td> -->
-<!-- </tr> -->
+<tr>
+<td colspan="5"><b>Unit 05: Diagnosing Collinearity and Tools for Dealing with It</b></td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 18</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/08-diagnosing-collinearity.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;">Diagnosing Collinearity</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-09-30-notes-diagnosing-collinearity"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 18</td>
+<td align="center" style="vertical-align:middle;">
+  <a class="my-link" href="readings/08-diagnosing-collinearity.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;">Diagnosing Collinearity</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="notes/07-diagnosing-collinearity.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 20</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/09-pca-via-spectral-decomposition.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;">Principal Components Analysis via Spectral Decomposition</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-10-04-notes-pca-via-spectral-decomposition"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 20</td>
+<td align="center" style="vertical-align:middle;">
+  <a class="my-link" href="readings/09-pca-via-spectral-decomposition.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;">Principal Components Analysis via Spectral Decomposition</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="notes/08-pca-via-spectral-decomposition.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
